devops/k8s/staging/monitoring.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: grafana-agent
  namespace: ecoci-staging
spec:
  selector:
    matchLabels:
      name: grafana-agent
  template:
    metadata:
      labels:
        name: grafana-agent
    spec:
      serviceAccount: grafana-agent
      containers:
      - name: grafana-agent
        image: grafana/agent:v0.35.0
        args:
        - -config.file=/etc/agent/agent.yaml
        - -prometheus.wal-directory=/tmp/agent/wal
        - -enable-features=integrations-next
        volumeMounts:
        - name: grafana-agent-config
          mountPath: /etc/agent
        - name: varlog
          mountPath: /var/log
          readOnly: true
        - name: varlibdockercontainers
          mountPath: /var/lib/docker/containers
          readOnly: true
        ports:
        - containerPort: 8080
          name: http-metrics
        securityContext:
          privileged: true
          runAsUser: 0
      volumes:
      - name: grafana-agent-config
        configMap:
          name: grafana-agent-config
      - name: varlog
        hostPath:
          path: /var/log
      - name: varlibdockercontainers
        hostPath:
          path: /var/lib/docker/containers
      tolerations:
      - operator: Exists
